# secure_notes

./: Cargo.toml  README.md
iOS/: project.yml
iOS/SecureNote/: ContentView.swift  SecureNoteApp.swift  core.swift
iOS/SecureNote.xcodeproj/: project.pbxproj
iOS/SecureNote.xcodeproj/project.xcworkspace/xcuserdata/wassim.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/SecureNote.xcodeproj/xcuserdata/wassim.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/: Cargo.toml  uniffi.toml
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/xcuserdata/wassim.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  lib.rs
shared_types/: build.rs
