[workspace]
members = ["shared", "shared_types"]
resolver = "1"

[workspace.package]
authors = ["Wassim Mansouri <wassim@wassimans.com>"]
edition = "2021"
repository = "https://github.com/wassimans/secure_notes"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi"]
rust-version = "1.79.0"

[workspace.dependencies]
anyhow = "1.0.79"
serde = "1.0.195"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
